...
                ),
              ],
            ),
            const SizedBox(height: 20),
            const Center(
              child: Text(
                "Dashboard",
                style: TextStyle(fontWeight: FontWeight.bold, fontSize: 35),
              ),
            ),
            const SizedBox(height: 20),
            Expanded(
              child: SingleChildScrollView(
...
                        InkWell(
                          onTap: () {
                            _showTopLeft(context);
                          },
                          child: const DashboardCard(
                            icon: FontAwesomeIcons.democrat,
                            title: "จัดกลุ่มตามอายุ",
                            value: "120",
                            color: Colors.blue,
                            iconColor: Color(0xffE0EAFF),
                            height: 175,
                            width: 175,
                            iconSize: 50,
...
                        InkWell(
                          onTap: () {
                            _showTopRight(context);
                          },
                          child: const DashboardCard(
                            icon: FontAwesomeIcons.chartColumn,
                            title: "เฝ้าระวังเป็นพิเศษ",
                            value: "35",
                            color: Colors.green,
                            iconColor: Color(0xffE0EAFF),
                            height: 175,
                            width: 175,
                            iconSize: 50,
...
                        InkWell(
                          onTap: () {
                            _showBottomLeft(context);
                          },
                          child: const DashboardCard(
                            icon: FontAwesomeIcons.chartColumn,
                            title: "จัดกลุ่มตามเพศ",
                            value: "5",
                            color: Colors.red,
                            iconColor: Color(0xffE0EAFF),
                            height: 175,
                            width: 175,
                            iconSize: 50,
...
                        InkWell(
                          onTap: () {
                            _showBottomRight(context);
                          },
                          child: const DashboardCard(
                            icon: FontAwesomeIcons.republican,
                            title: "จัดกลุ่มตามหอผู้ป่วย",
                            value: "10",
                            color: Colors.orange,
                            iconColor: Color(0xffE0EAFF),
                            height: 175,
                            width: 175,
                            iconSize: 50,
...
