...
          );
        } else {
          final genderCount = snapshot.data!;
          return AlertDialog(
            title: Row(
              children: [
                const Text('จำแนกด้วยเพศ'),
                const Spacer(),
                InkWell(
                  onTap: () {
                    Navigator.of(context).pop();
                  },
                  child: const Icon(FontAwesomeIcons.xmark),
...
