...
          width: 300, // Set desired width
          height: 600, // Set desired height
          child: Scaffold(
            appBar: AppBar(
              title: Row(
                children: [
                  const Text('จำแนกด้วยหอผู้ป่วย'),
                  const Spacer(),
                  InkWell(
                    onTap: () {
                      Navigator.of(context).pop();
                    },
                    child: const Icon(FontAwesomeIcons.xmark),
...
